fix banner on smaller devices

--- a/style.css
+++ b/style.css
@@ -169,14 +169,9 @@ background: linear-gradient(to right, rgb(169, 106, 141) 0%, rgb(95, 95, 110) 40
 
 @media(max-width: 767px) {
     .slide-overlay h1 {
-        font-size: 20px !important;
-    }
-    .slide-overlay h2, .slide-overlay button{
         display: none;
     }
-    #team .inner-member {
-        height: 165px;
-    }
+
 }
 
 .slide-overlay button {
